--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
     <div class="main">
       
       <div class="user b">
-        <h2>You
+        <h2>User
         <img id="user-hand" src="" alt="" /></h2>
         <div class="logos">
           <img src="./assets/rock-logo.png" alt="rock" />
@@ -25,7 +25,7 @@
       <img src="./assets/vs.png" alt="" />
       
       <div class="Ai b">
-        <h2>Comp</h2>
+        <h2>AI</h2>
         <img id="Ai-hand" alt="" />
       </div>
     </div>
