Created Rock-Paper-Scissors game using HTML,CSS and JS

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Rock-Paper-Scissors</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <div class="game_image">
         <img src='./assets/game-image.png' alt="game-image">
     </div>
     <div class="playBtn">
-        <img src="./assets/play-button.png" id="start" alt="button" onclick="start()"> 
+        <img src="./assets/play-button.png" id="start" alt="button" onclick="getSetGo()"> 
            <a href="./game.html"> Play the Game </a>
     </div>
     <script src="./index.js"></script>
